--- a/flutter_for_weibo/ios/Runner/Info.plist
+++ b/flutter_for_weibo/ios/Runner/Info.plist
@@ -41,5 +41,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
+    
+    
+    <key>NSAppTransportSecurity</key>
+    <dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+    
+    
 </dict>
 </plist>
